# fastapi_ci

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: ci.yml
evrone_fastapi/: main.py  settings.py
